Pequeños ajustes en la GUI y el proceso de los datos de GitHub